# proactive-refresh

./: .gitignore  Cargo.toml  README.md
circom/: hardhat.config.js  package.json
circom/circuits/: bls_signature.circom  division.circom
circom/scripts/: build_dummy.sh  build_signature.sh  circom_dev.sh  dummy.circom  dummy.wasm  input_signature.json  signature.circom
diagrams/: overview.excalidraw
examples/: basic.rs  simulation.rs
src/: bls.rs  lagrange.rs  lib.rs  main.rs  pr.rs  threshold.rs
src/ats_pr/: bls.rs  lagrange.rs  mod.rs  pr.rs  threshold.rs  utils.rs
